Commit made by the Bioconductor Git-SVN bridge.
Commit id: fe33d2b167448a75d83a7a42a0228629701cc337

    bumped version


Commit id: baa23c99844676814367ce2dff217006d61e8a1e

    Merge branch 'master' of https://github.com/pappewaio/AllelicImbalance


Commit id: 996c5260bfa9ec99e52fe60879e5559da330deb1

    a missing rd file


Commit id: c7be0749442371af45f8e3d577216249e00ea826

    completely working update of scanForHeterozygotes


Commit id: e45c555a161d842c4dd65d64ee84ce43103afc0b

    refreshed scanForHetZygotes


Commit id: 4ee73af5cc073d6feda437dd1927c6f3e7008638

    80c-formatted a function



git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/AllelicImbalance@101009 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/vignettes/AllelicImbalance-vignette.Rmd
+++ b/vignettes/AllelicImbalance-vignette.Rmd
@@ -235,7 +235,7 @@ allele will visit the meta-columns "ref" or "alt" to extract that information.
 
 ```{r echo=TRUE, eval=TRUE}
 #from simulated data
-mcols(a.simple)[,"ref"] <- c("T","C","G")
+mcols(a.simple)[,"ref"] <- c("G","T","C")
 
 #from reference genome
 data(ASEset.sim)
