Commit made by the Bioconductor Git-SVN bridge.
Commit id: b2c234402e4052d2347c27a4e4f31a7bf369d4ac

    cleared the R CMD check errors


Commit id: a52d701e5c5b8404c60da5089c85a59fddcd2a3e

    cleared the R CMD build errors


Commit id: 51d32a07937b623bb1ec23da4c9fcee80d4ab2a6

    Merge branch 'changesToMethods'


Commit id: be4b002a1f05c3dd7f755d94ff973144f439ca7d

    removed auxillary functions


Commit id: 237850c012bd3d71888630e3359e85dbd360ad99

    all functions on auxillary-functions transferred to S4


Commit id: 0d02574b0a543e345dc2fe0dca372566a447450a

    countAllelesFromBam to S4


Commit id: 2d8aba8a9e260b85977a49ee2b736444bfe270ed

    getAreaFromGeneNames to S4


Commit id: 3c519390b279e19bf175ace8d4e8da67676f0a0a

    getAreaFromGeneNames to S4


Commit id: 7f578c4775483ba7232034f0a53c3f62fb42d79a

    merge with master


Commit id: d10f50aa2995af653fa59fb182df007c60d2685a

    ref and alt accessor



git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/AllelicImbalance@101252 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/vignettes/AllelicImbalance-vignette.Rmd
+++ b/vignettes/AllelicImbalance-vignette.Rmd
@@ -235,16 +235,17 @@ allele will visit the meta-columns "ref" or "alt" to extract that information.
 
 ```{r echo=TRUE, eval=TRUE}
 #from simulated data
-mcols(a.simple)[,"ref"] <- c("G","T","C")
+ref(a.simple) <- c("G","T","C")
+
+#infer and set alternative allele
+alt <- inferAltAllele(a.simple)
+alt(a.simple) <- alt
 
 #from reference genome
 data(ASEset.sim)
 fasta <- system.file('extdata/hg19.chr17.subset.fa', package='AllelicImbalance')
-a.ref <- refAllele(ASEset.sim,fasta=fasta) 
-
-#infer and set alternative allele
-alt <- inferAltAllele(a.simple)
-mcols(a.simple)[,"alt"] <- alt
+ref <- refAllele(ASEset.sim,fasta=fasta) 
+ref(ASEset.sim) <- ref
 ```
 
 Using reference allele information when measuring the impact of mapping bias globally, can be
@@ -277,7 +278,7 @@ a <- ASEsetFromCountList(gr, countListUnknown=countListUnknown)
 
 #set a random allele as reference
 genotype(a) <- inferGenotypes(a)
-mcols(a)[["ref"]] <- randomRef(a)
+ref(a) <- randomRef(a)
 
 #get the fraction of the reference allele
 refFrac <- refFraction(a)
@@ -393,7 +394,7 @@ The barplot with type='function' can be visualized according to three different 
 data(ASEset)
 
 #using reference and alternative allele information
-mcols(ASEset)[,"alt"] <- inferAltAllele(ASEset)
+alt(ASEset) <- inferAltAllele(ASEset)
 barplot(ASEset[1], type="fraction", strand="+", xlab.text="", top.fraction.criteria="ref")
 
 #using phase information
