--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,12 @@
+CHANGES IN VERSION 1.6.0
+-----------------------
+
+NEW FEATURES
+
+    o ASEset slot for Phase information 
+    o generation of masked reference genomes
+    o calculation of reference fraction 'refFraction'
+
 CHANGES IN VERSION 1.2.0
 -----------------------
 
